--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bestzip": "^2.1.7",
     "browser-sync": "^2.26.12",
+    "bulma": "^0.9.1",
     "chalk": "^2.4.2",
     "cryptr": "^4.0.2",
     "dotenv": "^8.0.0",
