--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is the command-line interface (cli) for COMP 426 taught at the University of North Carolina at Chapel Hill. All assignments in COMP 426 must be submitted for grading using this tool.",
   "main": "submit.js",
   "scripts": {
-    "submit": "node -r dotenv/config submit.js"
+    "submit": "node -r dotenv/config submit.js",
+    "start": "node index.js"
   },
   "author": "Robertjb",
   "license": "ISC",
