--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "author": "Robertjb",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.0",
     "bestzip": "^2.1.7",
     "browser-sync": "^2.26.12",
     "bulma": "^0.9.1",
     "chalk": "^2.4.2",
     "cryptr": "^4.0.2",
     "dotenv": "^8.0.0",
+    "express": "^4.17.1",
     "firebase": "^8.1.1",
     "form-data": "^2.5.0",
     "jquery": "^3.5.1",
