--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "comp426-cli",
+  "name": "zrdjrontend",
   "version": "1.0.0",
-  "description": "This is the command-line interface (cli) for COMP 426 taught at the University of North Carolina at Chapel Hill. All assignments in COMP 426 must be submitted for grading using this tool.",
-  "main": "submit.js",
+  "description": "426 Final Project.",
+  "main": "index.js",
   "scripts": {
-    "submit": "node -r dotenv/config submit.js",
-    "start": "node index.js"
+    "start": "node -r dotenv/config index.js"
   },
   "author": "Robertjb",
   "license": "ISC",
@@ -21,7 +20,8 @@
     "firebase": "^8.1.1",
     "form-data": "^2.5.0",
     "jquery": "^3.5.1",
-    "prompts": "^2.1.0"
+    "prompts": "^2.1.0",
+    "require": "^2.4.20"
   },
   "devDependencies": {},
   "repository": {
