--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "axios": "^0.21.0",
     "bestzip": "^2.1.7",
-    "browser-sync": "^2.26.12",
+    "browser-sync": "^2.26.13",
     "bulma": "^0.9.1",
     "chalk": "^2.4.2",
+    "cors": "^2.8.5",
     "cryptr": "^4.0.2",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
